# AWC-Chess

./: .gitignore  AWC_Chess.cpp  CMakeLists.txt  LICENSE  README.md
AWC_Chess/: AWC_Chess.cpp  AWC_ChessGame.cpp  AWC_ChessGame.h  ConsoleOutput.cpp  ConsoleOutput.h  MainMoves.cpp  MainMoves.h  SpecialMoves.cpp
_NOTES/: pieces.txt
source/: AWC_ChessGame.cpp  AWC_ChessGame.hpp  ConsoleOutput.cpp  ConsoleOutput.hpp  MainMoves.cpp  SpecialMoves.cpp  SpecialMoves.hpp
src/: ChessGame.cpp  ChessGame.hpp  main.cpp  pieces.hpp  players.hpp
